2010-10-07  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (rs6000_emit_prologue): Use gen_int_mode
	rather than sign extension by hand.

2010-10-07  Jan Hubicka  <jh@suse.cz>

	PR middle-end/45926
	* ipa.c (cgraph_remove_unreachable_nodes): Revert my previous patch.

2010-10-07  Richard Guenther  <rguenther@suse.de>

	PR bootstrap/45914
	* configure.ac: Fix typo.
	* configure: Regenerated.

2010-10-06  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* config/spu/spu-c.c (spu_resolve_overloaded_builtin): Don't use
	define_builtin_std where it's unnecessary.
	* config/i386/nto.h (TARGET_OS_CPP_BUILTINS): Likewise.

2010-10-06  Anatoly Sokolov  <aesok@post.ru>

	* doc/tm.texi.in (CLASS_LIKELY_SPILLED_P): Remove documentation.
	* doc/tm.texi.in: Regenerate.
	* system.h (CLASS_LIKELY_SPILLED_P): Poison.
	* targhooks.c (default_class_likely_spilled_p): Don't use the
	CLASS_LIKELY_SPILLED_P macro.

	* config/arm/arm.md: Update comment.

2010-10-06  Jan Hubicka  <jh@suse.cz>

	* ipa.c (cgraph_remove_unreachable_nodes): External references can
	always be removed.
	(cgraph_externally_visible_p): We can not bring local comdats that
	are known to linker; fix handling of internal visibility.
	(function_and_variable_visibility): Likewise.

2010-10-06  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/45394
	* combine.c (cleanup_auto_inc_dec): Remove AFTER parameter and adjust.
	(struct rtx_subst_pair): Remove AFTER field.
	(propagate_for_debug_subst): Adjust call to cleanup_auto_inc_dec.
	(propagate_for_debug): Remove MOVE parameter and adjust.
	(try_combine): In the special case where I2 is a PARALLEL, combine only
	destinations of SETs and set I2SRC to the I2 source.
	Adjust calls to propagate_for_debug throughout.
	* reload1.c (eliminate_regs_1) <ASM_OPERANDS>: Do not abort for debug
	insns.

2010-10-06  Olivier Hainque  <hainque@adacore.com>

	* config/rs6000/rs6000.c (rs6000_expand_ternop_builtin): Rewrite
	switch on insn codes as sequence of ifs.
